--- a/task/fips-operator-bundle-check-oci-ta/0.1/fips-operator-bundle-check-oci-ta.yaml
+++ b/task/fips-operator-bundle-check-oci-ta/0.1/fips-operator-bundle-check-oci-ta.yaml
@@ -140,10 +140,10 @@ spec:
         echo "${images_processed_template/\[%s]/[$digests_processed_string]}" >/tekton/home/images_processed.txt
       computeResources:
         limits:
-          memory: 512Mi
+          memory: 4Gi
         requests:
-          cpu: 100m
-          memory: 256Mi
+          cpu: 300m
+          memory: 2Gi
       securityContext:
         capabilities:
           add:
@@ -151,10 +151,10 @@ spec:
     - name: fips-operator-check-step-action
       computeResources:
         limits:
-          memory: 512Mi
+          memory: 4Gi
         requests:
-          cpu: 100m
-          memory: 256Mi
+          cpu: 300m
+          memory: 2Gi
       ref:
         params:
           - name: url
