--- a/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
+++ b/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
@@ -274,10 +274,10 @@ spec:
     - name: fips-operator-check-step-action
       computeResources:
         limits:
-          memory: 8Gi
+          memory: 12Gi
         requests:
-          cpu: 500m
-          memory: 8Gi
+          cpu: "1"
+          memory: 12Gi
       ref:
         params:
           - name: url
