--- a/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
+++ b/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
@@ -174,6 +174,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: "1"
         requests:
           cpu: "1"
           memory: 8Gi
@@ -185,6 +186,7 @@ spec:
       computeResources:
         limits:
           memory: 12Gi
+          cpu: "1"
         requests:
           cpu: "1"
           memory: 12Gi
