--- a/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
+++ b/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
@@ -264,6 +264,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: "1"
         requests:
           cpu: "1"
           memory: 8Gi
@@ -274,10 +275,11 @@ spec:
     - name: fips-operator-check-step-action
       computeResources:
         limits:
-          memory: 16Gi
+          memory: 8Gi
+          cpu: "1"
         requests:
           cpu: "1"
-          memory: 16Gi
+          memory: 8Gi
       ref:
         params:
           - name: url
